--- a/Codes/Task.ipynb
+++ b/Codes/Task.ipynb
@@ -55,8 +55,7 @@
    "source": [
     "import tensorflow as tf\n",
     "path = '/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/'\n",
-    "block_h = 32\n",
-    "block_w = 32\n",
+    "block_h ,block_w = (32,32)\n",
     "Model = tf.keras.models.load_model(path + 'Outputs/' + 'Model_Case_1_1.h5')"
    ]
   },
