--- a/Codes/mod_code/Step 1 - mgmt data preparation (1).ipynb
+++ b/Codes/mod_code/Step 1 - mgmt data preparation (1).ipynb
@@ -17,7 +17,7 @@
     }
    ],
    "source": [
-    "%cd /Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt\n"
+    "%cd /Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt"
    ]
   },
   {
@@ -79,7 +79,7 @@
    "outputs": [],
    "source": [
     "# Function Definition --> Generate Tumor Images of Patients\n",
-    "\n",
+    "import os\n",
     "def Generate_images():\n",
     "    from tqdm import tqdm\n",
     "    print('Generating Images')\n",
