--- a/Codes/mod_code/Step 2 - mgmt data preprocessing (1).ipynb
+++ b/Codes/mod_code/Step 2 - mgmt data preprocessing (1).ipynb
@@ -37,7 +37,7 @@
    "outputs": [],
    "source": [
     "# Function Definition --> For reading the Images and append it to a list\n",
-    "\n",
+    "import os\n",
     "def Reading_Data():\n",
     "    from tqdm import tqdm  # It is a progress bar, Used to track the estimated remaining time.\n",
     "    import cv2  # Used for Images processing.\n",
