--- a/Codes/testing/Step 2-data preprocessing.ipynb
+++ b/Codes/testing/Step 2-data preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,25 +183,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Removing .DS_Store\n",
+      "Removed .DS_Store from Work_Dir : /Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Data/BRATS/mod_data1/Working_Data/\n",
+      "Removed .DS_Store from Case_Path : /Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Data/BRATS/mod_data1/Working_Data/Case_5/\n",
+      "Removed .DS_Store from Case_Path : /Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Data/BRATS/mod_data1/Working_Data/Case_2/\n",
+      "Removed .DS_Store from Case_Path : /Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Data/BRATS/mod_data1/Working_Data/Case_3/\n",
+      "Removed .DS_Store from Case_Path : /Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Data/BRATS/mod_data1/Working_Data/Case_4/\n",
+      "Removed .DS_Store from Case_Path : /Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Data/BRATS/mod_data1/Working_Data/Case_1/\n",
       "Reading Data\n",
       "/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Data/BRATS/mod_data1/Working_Data/Case_5/train/MGMT_positive/\n",
       "0\n",
       "/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Data/BRATS/mod_data1/Working_Data/Case_5/train/MGMT_negative/\n",
       "1\n",
       "Case_5\n",
-      "Length of the total training data: 16592\n",
-      "1 1 0 0 1 0 0 1 0 1 0 1 1 0 1 1 0 1 0 0 0 1 0 0 0 1 0 0 0 1 1 1 0 1 1 0 1 0 0 0 1 0 1 0 0 0 0 1 0 1 Initilizing Features & Labels\n",
-      "List Size:  16592 16592\n",
+      "Length of the total training data: 15742\n",
+      "1 0 0 0 0 0 0 0 1 1 1 0 0 0 0 0 0 0 0 1 0 0 0 1 0 1 1 0 1 0 0 0 0 0 0 0 1 1 0 0 1 1 0 0 0 0 0 0 0 1 Initilizing Features & Labels\n",
+      "List Size:  15742 15742\n",
       "Converting into Numpy Array\n",
-      "Array Size with Reshape:  16592 16592\n",
-      "Array Shape with Reshape:  (16592, 120, 120, 1) (16592,)\n",
+      "Array Size with Reshape:  15742 15742\n",
+      "Array Shape with Reshape:  (15742, 120, 120, 1) (15742,)\n",
       "Storing Preprocessed Data\n",
       "Reading Data\n",
       "/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Data/BRATS/mod_data1/Working_Data/Case_2/train/MGMT_positive/\n",
@@ -209,12 +216,12 @@
       "/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Data/BRATS/mod_data1/Working_Data/Case_2/train/MGMT_negative/\n",
       "1\n",
       "Case_2\n",
-      "Length of the total training data: 16413\n",
-      "0 1 0 1 0 0 1 1 0 1 1 0 1 1 0 0 1 0 1 0 1 1 0 1 0 0 1 0 0 0 0 1 1 0 0 1 1 0 1 0 0 1 0 0 0 1 1 0 0 1 Initilizing Features & Labels\n",
-      "List Size:  16413 16413\n",
+      "Length of the total training data: 15515\n",
+      "0 0 0 1 0 1 1 1 1 1 0 1 0 0 1 0 1 0 1 0 0 1 0 0 0 0 0 0 0 1 0 0 0 0 0 1 0 1 0 0 1 1 0 1 1 1 0 0 0 0 Initilizing Features & Labels\n",
+      "List Size:  15515 15515\n",
       "Converting into Numpy Array\n",
-      "Array Size with Reshape:  16413 16413\n",
-      "Array Shape with Reshape:  (16413, 120, 120, 1) (16413,)\n",
+      "Array Size with Reshape:  15515 15515\n",
+      "Array Shape with Reshape:  (15515, 120, 120, 1) (15515,)\n",
       "Storing Preprocessed Data\n",
       "Reading Data\n",
       "/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Data/BRATS/mod_data1/Working_Data/Case_3/train/MGMT_positive/\n",
@@ -222,12 +229,12 @@
       "/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Data/BRATS/mod_data1/Working_Data/Case_3/train/MGMT_negative/\n",
       "1\n",
       "Case_3\n",
-      "Length of the total training data: 16571\n",
-      "0 1 1 1 0 1 1 0 0 1 0 1 0 0 1 0 0 0 1 0 0 0 0 0 0 1 0 0 0 0 1 0 1 1 1 0 0 1 1 1 0 0 1 0 1 1 1 0 1 1 Initilizing Features & Labels\n",
-      "List Size:  16571 16571\n",
+      "Length of the total training data: 15710\n",
+      "1 1 1 1 0 1 0 1 1 0 0 1 1 1 1 1 0 0 0 0 1 1 1 0 0 0 1 0 0 0 0 1 1 0 1 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 Initilizing Features & Labels\n",
+      "List Size:  15710 15710\n",
       "Converting into Numpy Array\n",
-      "Array Size with Reshape:  16571 16571\n",
-      "Array Shape with Reshape:  (16571, 120, 120, 1) (16571,)\n",
+      "Array Size with Reshape:  15710 15710\n",
+      "Array Shape with Reshape:  (15710, 120, 120, 1) (15710,)\n",
       "Storing Preprocessed Data\n",
       "Reading Data\n",
       "/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Data/BRATS/mod_data1/Working_Data/Case_4/train/MGMT_positive/\n",
@@ -235,12 +242,12 @@
       "/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Data/BRATS/mod_data1/Working_Data/Case_4/train/MGMT_negative/\n",
       "1\n",
       "Case_4\n",
-      "Length of the total training data: 16450\n",
-      "0 0 0 0 0 0 0 1 1 0 0 1 0 1 1 0 0 1 1 1 1 0 0 1 0 0 1 1 0 1 1 1 1 1 0 0 0 0 0 0 1 1 1 0 0 0 0 0 1 0 Initilizing Features & Labels\n",
-      "List Size:  16450 16450\n",
+      "Length of the total training data: 15562\n",
+      "0 0 0 1 1 1 0 1 1 1 1 0 1 1 0 0 1 0 0 0 1 1 0 0 0 1 1 1 1 1 0 0 1 1 1 1 1 0 1 1 0 0 1 0 0 0 0 1 0 1 Initilizing Features & Labels\n",
+      "List Size:  15562 15562\n",
       "Converting into Numpy Array\n",
-      "Array Size with Reshape:  16450 16450\n",
-      "Array Shape with Reshape:  (16450, 120, 120, 1) (16450,)\n",
+      "Array Size with Reshape:  15562 15562\n",
+      "Array Shape with Reshape:  (15562, 120, 120, 1) (15562,)\n",
       "Storing Preprocessed Data\n",
       "Reading Data\n",
       "/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Data/BRATS/mod_data1/Working_Data/Case_1/train/MGMT_positive/\n",
@@ -248,12 +255,12 @@
       "/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Data/BRATS/mod_data1/Working_Data/Case_1/train/MGMT_negative/\n",
       "1\n",
       "Case_1\n",
-      "Length of the total training data: 16802\n",
-      "1 0 1 1 1 0 1 1 1 0 1 1 0 0 1 1 0 0 1 1 0 0 0 0 0 0 0 0 1 0 0 1 0 1 1 0 0 0 0 1 0 1 1 0 0 0 0 1 1 1 Initilizing Features & Labels\n",
-      "List Size:  16802 16802\n",
+      "Length of the total training data: 15940\n",
+      "0 0 1 1 1 1 1 0 0 0 0 1 1 1 1 1 1 0 0 1 0 1 1 0 0 1 1 0 0 0 0 0 1 1 0 0 1 0 1 0 1 0 0 0 1 0 0 0 0 0 Initilizing Features & Labels\n",
+      "List Size:  15940 15940\n",
       "Converting into Numpy Array\n",
-      "Array Size with Reshape:  16802 16802\n",
-      "Array Shape with Reshape:  (16802, 120, 120, 1) (16802,)\n",
+      "Array Size with Reshape:  15940 15940\n",
+      "Array Shape with Reshape:  (15940, 120, 120, 1) (15940,)\n",
       "Storing Preprocessed Data\n",
       "Done..!!\n"
      ]
@@ -264,7 +271,7 @@
        "0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
