--- a/Codes/Step 3 - mgmt Model.ipynb
+++ b/Codes/Step 3 - mgmt Model.ipynb
@@ -3409,9 +3409,6 @@
    "name": "Step 3 - mgmt Model.ipynb",
    "provenance": []
   },
-  "interpreter": {
-   "hash": "1b9603ab75704494434c4abe56997ef3bb46c839483ec68f7dba80f8b5009106"
-  },
   "kernelspec": {
    "display_name": "Python 3.10.6 ('base')",
    "language": "python",
@@ -3428,6 +3425,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "1b9603ab75704494434c4abe56997ef3bb46c839483ec68f7dba80f8b5009106"
+   }
   }
  },
  "nbformat": 4,
