--- a/Codes/data_sorting_brats.ipynb
+++ b/Codes/data_sorting_brats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -121,29 +121,29 @@
        "[585 rows x 2 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.read_csv(\n",
-    "    '/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Codes/train_labels_MGMT.csv')\n",
+    "    'E:/ML projects/gliobastoma-mgmt/Codes/train_labels_MGMT.csv')\n",
     "df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1252"
+       "671"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,8 +182,8 @@
     }
    ],
    "source": [
-    "m_neg='/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Data/BRATS/data/MGMT_negative'\n",
-    "m_pos='/Users/vitthal/Documents/Research/DataScience/MedicalResearch/mgmt/Data/BRATS/data/MGMT_positive'\n",
+    "m_neg='E:/ML projects/gliobastoma-mgmt/Data/MGMT_negative'\n",
+    "m_pos='E:/ML projects/gliobastoma-mgmt/Data/MGMT_positive'\n",
     "count=0\n",
     "for i in tqdm(range(len(df))):\n",
     "    path1=source+'BraTS2021_'+'{0:05}'.format(df.BraTS21ID[i])\n",
@@ -220,7 +220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.5"
   },
   "orig_nbformat": 4
  },
