model testing  revised

--- a/Codes/data_sorting/data_sorting_upenn.ipynb
+++ b/Codes/data_sorting/data_sorting_upenn.ipynb
@@ -19,9 +19,12 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import sys\n",
+    "sys.path.append('..')\n",
+    "import config\n",
     "# path to UPENN Dataset\n",
-    "path = 'E:/ML projects/gliobastoma-mgmt/'\n",
-    "path_modalities=path+ 'NifTI-files/'\n",
+    "path = config.MAIN_DIR\n",
+    "path_modalities=config.DATASET_PATH\n",
     "path_structural_images=path_modalities+'images_structural/'\n",
     "path_automated_seg=path_modalities+'automated_segm/'\n",
     "path_seg=path_modalities+'images_segm/'"
@@ -89,14 +92,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 213/213 [00:02<00:00, 73.01it/s]\n"
+      "100%|██████████| 213/213 [00:00<00:00, 758.85it/s]\n"
      ]
     }
    ],
@@ -114,7 +117,7 @@
     "    path_auto_segm = path_automated_seg+df6.id[i]+'_automated_approx_segm.nii.gz'\n",
     "    rename_segm = df6.id[i]+'_seg.nii.gz'\n",
     "\n",
-    "    if df6.mgmt[i]==0 and neg<3: # only 5 negatives\n",
+    "    if df6.mgmt[i]==0 and neg<2: # only 5 negatives\n",
     "        path2= m_neg+df6.id[i]+'/'\n",
     "        seg_path = path2+rename_segm\n",
     "        sh.copytree(path1,path2)\n",
@@ -123,7 +126,58 @@
     "        elif(os.path.exists(path_auto_segm)):\n",
     "            sh.copy(path_auto_segm,seg_path)\n",
     "        neg+=1\n",
-    "    elif df6.mgmt[i]==1 and pos<3: # only 5 positives\n",
+    "    elif df6.mgmt[i]==1 and pos<2: # only 5 positives\n",
+    "        path2=m_pos+df6.id[i]+'/'\n",
+    "        seg_path = path2+rename_segm\n",
+    "        sh.copytree(path1,path2)\n",
+    "        if(os.path.exists(path_segm)):\n",
+    "            sh.copy(path_segm,seg_path)\n",
+    "        elif(os.path.exists(path_auto_segm)):\n",
+    "            sh.copy(path_auto_segm,seg_path)\n",
+    "        else:\n",
+    "            print(\"No segmentation found for \",df6.id[i])\n",
+    "        pos+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 213/213 [00:01<00:00, 120.49it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#for test folder\n",
+    "\n",
+    "df6=pd.read_csv(path+'Codes/upenn_data.csv')\n",
+    "\n",
+    "m_neg = path + 'Test/MGMT_negative/'\n",
+    "m_pos = path + 'Test/MGMT_positive/'\n",
+    "\n",
+    "pos = 0\n",
+    "neg = 0\n",
+    "for i in tqdm(range(len(df6)-1,-1,-1)):\n",
+    "    path1 = path_structural_images+df6.id[i]\n",
+    "    path_segm = path_seg+df6.id[i]+'_segm.nii.gz'\n",
+    "    path_auto_segm = path_automated_seg+df6.id[i]+'_automated_approx_segm.nii.gz'\n",
+    "    rename_segm = df6.id[i]+'_seg.nii.gz'\n",
+    "\n",
+    "    if df6.mgmt[i]==0 and neg<2: # only 5 negatives\n",
+    "        path2= m_neg+df6.id[i]+'/'\n",
+    "        seg_path = path2+rename_segm\n",
+    "        sh.copytree(path1,path2)\n",
+    "        if(os.path.exists(path_segm)):\n",
+    "            sh.copy(path_segm,seg_path)\n",
+    "        elif(os.path.exists(path_auto_segm)):\n",
+    "            sh.copy(path_auto_segm,seg_path)\n",
+    "        neg+=1\n",
+    "    elif df6.mgmt[i]==1 and pos<2: # only 5 positives\n",
     "        path2=m_pos+df6.id[i]+'/'\n",
     "        seg_path = path2+rename_segm\n",
     "        sh.copytree(path1,path2)\n",
